Fixed nav button not working on mobile view, and added pdf links to Home page

--- a/styles/home.scss
+++ b/styles/home.scss
@@ -150,3 +150,20 @@
     }
   }
 }
+
+.project-info {
+  text-align: center;
+  padding: 4rem 0;
+  &__list {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    row-gap: 1rem;
+  }
+
+  &__link {
+    text-decoration: underline;
+  }
+}
